clusters/hybrid01/config/authelia/authelia-peerauth.yaml
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: strict
  namespace: authelia
spec:
  mtls:
    mode: STRICT
