clusters/hybrid01/config/authelia/authelia-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia
  labels: 
    app.kubernetes.io/name: authelia
spec:
  type: ClusterIP
  sessionAffinity: None
  selector:
    app.kubernetes.io/name: authelia
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: metrics
      protocol: TCP
      port: 9959
      targetPort: metrics
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia
  labels: 
    app.kubernetes.io/name: authelia
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels: 
      app.kubernetes.io/name: authelia
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: authelia
    spec:
      hostNetwork: false
      hostPID: false
      hostUsers: false
      hostIPC: false
      affinity: 
        nodeAffinity: {}
        podAffinity: {}
        podAntiAffinity: {}
      enableServiceLinks: false
      containers:
      - name: authelia
        image: ghcr.io/authelia/authelia:4.39.25
        imagePullPolicy: IfNotPresent
        securityContext: 
          runAsNonRoot: true
          runAsUser: 8000
          runAsGroup: 9000
          # fsGroup: 8000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        command: ["authelia"]
        args:
        # - "config"
        # - "template"
        - --config=/configuration.yaml
        resources: 
          requests:
            cpu: 15m
            memory: 50Mi
          limits:
            memory: 100M
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        - name: metrics
          containerPort: 9959
          protocol: TCP
        volumeMounts:
        - mountPath: /configuration.yaml
          name: config
          readOnly: true
          subPath: configuration.yaml
        - mountPath: /secrets/authelia-oidc-issuer
          name: authelia-oidc-issuer
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: authelia
          items:
          - key: configuration
            path: configuration.yaml
      - name: authelia-oidc-issuer
        secret:
            secretName: authelia-oidc-issuer
            items:
              - key: tls.key
                path: tls.key
              - key: tls.crt
                path: tls.crt
