clusters/hybrid01/config/authelia/ldap.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  labels: 
    app: ldap
spec:
  selector:
    matchLabels: 
      app: ldap
  replicas: 1
  automountServiceAccountToken: false
  securityContext: 
    runAsNonRoot: true
    runAsUser: 1000
    runAsGroup: 1000
    fsGroup: 1000
    allowPrivilegeEscalation: false
    readOnlyRootFilesystem: true
  template:
    metadata:
      labels:
        app: ldap
      annotations:
        vault.security.banzaicloud.io/vault-addr: "http://openbao.openbao.svc.cluster.local:8200"
        vault.security.banzaicloud.io/vault-skip-verify: "false" 
        vault.security.banzaicloud.io/vault-role: "authelia"
    spec:
      containers:
      - name: lldap
        image: nitnelave/lldap:stable-alpine-rootless
        imagePullPolicy: Always
        securityContext: 
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          fsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources: 
          requests:
            cpu: 15m
            memory: 30Mi
          limits:
            memory: 100Mi
        ports:
        - name: ldap
          containerPort: 3890
          protocol: TCP
        - name: ldap-ui
          containerPort: 17170
          protocol: TCP
        volumeMounts:
          - name: ldap-data
            mountPath: /data
      volumes:
        - name: ldap-data
          persistentVolumeClaim:
            claimName: ldap
---
apiVersion: v1
kind: Service
metadata:
  name: ldap
spec:
  selector:
    app: ldap
  ports:
  - name: ldap
    protocol: TCP
    port: 3890
    targetPort: ldap
  - name: ldap-ui
    protocol: TCP
    port: 17170
    targetPort: ldap-ui
